@@ -10,6 +10,7 @@ Caroline Lemieux
 Christian Dax
 Christopher Ziegler
 Clément Tamines
+David Dokoupil
 David Müller
 Dávid Smolka
 Edmond Irani Liu
